# chat-o-llama

./: .gitignore  .mcp.json  CHANGELOG.md  CONTEXT.md  README.md  VERSION  app.py  chat-manager.sh  config.json  config_manager.py  config_with_backends.json  download-gguf.sh  install-llamacpp.sh  install-ollama.sh  install-utils.sh  install.sh  llama_cpp_setup_script.sh  models.txt  pyproject.toml  pytest.ini  quick_start_script.sh  requirements.txt  run_backend_tests.py  setup_test_environment.sh  test_suite.py
.githooks/: pre-commit
api/: __init__.py  backend.py  chat.py  conversations.py  mcp.py  routes.py
backends/: __init__.py  base.py  llama_cpp.py  manager.py  models.py  ollama.py
config/: __init__.py  defaults.py  settings.py  validation.py
docs/: api.md  backend_arch.md  chat_manager_docs.md  config.md  config_comparison.md  configuration.md  features.md  install.md  troubleshooting.md
persistence/: __init__.py  database.py
services/: __init__.py  chat_context.py  context_compressor.py  conversation_manager.py  llamacpp_client.py  llm_factory.py  llm_interface.py  mcp_manager.py  ollama_client.py  request_manager.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_backends.py
utils/: __init__.py  compression_engine.py  compression_monitor.py  compression_strategies.py  context_analyzer.py  database.py  logging.py  token_estimation.py
